--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@musicq/utils",
+  "name": "@musicq/toolbox",
   "version": "0.1.0",
   "description": "Utility functions",
   "scripts": {
@@ -10,12 +10,15 @@
   },
   "keywords": [
     "utils",
-    "utility"
+    "utility",
+    "tool",
+    "toolbox"
   ],
   "author": "kui.liang.sg@gmail.com",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^20.5.0",
+    "@vitest/coverage-v8": "^0.34.1",
     "tsup": "^7.2.0",
     "typescript": "^5.1.6",
     "vitest": "^0.34.1"
