--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@musicq/toolbox",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Utility functions",
   "scripts": {
     "build": "tsup src/*.ts",
@@ -25,6 +25,10 @@
   ],
   "author": "kui.liang.sg@gmail.com",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/musicq/toolbox.git"
+  },
   "devDependencies": {
     "@types/node": "^20.5.0",
     "@vitest/coverage-v8": "^0.34.1",
